--- a/basic-form/css/main.css
+++ b/basic-form/css/main.css
@@ -9,16 +9,9 @@ body {
   color: #384047;
 }
 
-form {
-  max-width: 500px;
-  margin: 10px auto;
-  padding: 10px 20px;
-  background: #f4f7f8;
-  border-radius: 8px;
-}
-
 h1 {
-  margin: 0 0 30px 0;
+  margin: 0 0 40px 0;
+  font-size: 40px;
   text-align: center;
 }
 
@@ -31,7 +24,6 @@ input[type="number"],
 input[type="search"],
 input[type="tel"],
 input[type="time"],
-input[type="url"],
 textarea,
 select {
   background: rgba(255,255,255,0.1);
@@ -80,7 +72,7 @@ fieldset {
 }
 
 legend {
-  font-size: 1.4em;
+  font-size: 1.8em;
   margin-bottom: 10px;
 }
 
@@ -109,9 +101,5 @@ label.light {
 }
 
 @media screen and (min-width: 800px) {
-
-  form {
-    max-width: 800px;
-  }
 
 }
